hphp/test/quick/ns_invalid_const.php.expectf

Fatal error: Undefined constant 'B' in %s on line 4
